--- a/Fireworks/index.html
+++ b/Fireworks/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Canvas-Effect</title>
+	<title>Fireworks-Effect</title>
 	<style>
-		body,canvas{margin:0;padding:0;border:0;}
+		body,canvas{margin:0;padding:0;border:0;overflow: hidden;}
 		#canvasPlayArea{width:100%;height: 100vh;background-color: rgba(0,0,0,1)}
+		.links{
+    		display: block;
+    		padding:10px;
+    		position: fixed;
+    		background-color: #666;
+    		color:#eee;
+    		text-decoration: none;
+    	}
 	</style>
 </head>
 <body>
+<a class="links" style="top:20px; left:20px" href="http://sujeetjaiswal.com">sujeetjaiswal.com</a>
+<a class="links" style="top: 20px; right:20px;" href="https://github.com/sujeetkrjaiswal/canvas-effects">Github</a>
+<a class="links" style="bottom: 20px; left:20px;" href="http://sujeetjaiswal.com/canvas-effects/">Other Effects</a>
 <canvas id="canvasPlayArea"></canvas>
 <script src="./Fireworks.min.js"></script>
 <script>
